<resources>
    <string name="app_name">Attendance Tracker</string>
    <string name="userid">UserId</string>
    <string name="pass">Password</string>
    <string name="login">LOGIN</string>
    <string name="don_t_have_an_account_signup">DONT HAVE AN ACCOOUNT? SIGN UP</string>
    <string name="student_icon">Student Icon</string>
    <string name="register">REGISTER</string>
    <string name="username">UserName</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">User Name</string>
    <string name="nav_header_subtitle">Class ID</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="percentage">Percentage</string>
    <string name="timetable">TimeTable</string>
    <string name="communicate">Communicate</string>
</resources>
